# pi_agent_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: keybindings.md
src/: agent.rs  app.rs  auth.rs  cli.rs  doctor.rs  extension_dispatcher.rs  extensions.rs  extensions_js.rs  interactive.rs  keybindings.rs  main.rs  models.rs  package_manager.rs  pi_wasm.rs  resources.rs  rpc.rs  sdk.rs  session.rs  session_index.rs  session_sqlite.rs  session_store_v2.rs  tools.rs  vcr.rs  version_check.rs
src/http/: client.rs
src/interactive/: agent.rs  commands.rs  file_refs.rs  keybindings.rs  model_selector_ui.rs  state.rs  tree_ui.rs  view.rs
src/providers/: mod.rs  openai_responses.rs  vertex.rs
tests/: e2e_cli.rs  e2e_live.rs  session_conformance.rs  tui_state.rs
tests/cross_platform_reports/linux/: platform_events.jsonl  platform_report.json  platform_report.md
tests/ext_conformance/reports/: CONFORMANCE_REPORT.md  conformance_summary.json
tests/full_suite_gate/: artifact_retention_report.json  certification_events.jsonl  certification_report.md  certification_verdict.json  full_suite_events.jsonl  full_suite_report.md  full_suite_verdict.json  perf3x_bead_coverage_audit.json  practical_finish_checkpoint.json  preflight_verdict.json  waiver_audit.json
